Overall cleanup of buttons + pointer over bankAccount cards + validation on transfer funds form

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
                                 <input type="password" class="fortextbox" name="loginPassword" placeholder="Password" formControlName="loginPassword" class="form-control" id="exampleInputPassword1">
                             </div>
                             <div class="d-flex justify-content-center">
-                                <input type="submit" class="btn btn-primary btn-block btn-lg gradient-custom-4 text-body" value="Log In">
+                                <input type="submit" class="btn btn-primary" value="Log In">
                             </div>
                         </form>
                     </div>
