--- a/src/app/components/create-bank-account-form/create-bank-account-form.component.html
+++ b/src/app/components/create-bank-account-form/create-bank-account-form.component.html
@@ -5,19 +5,19 @@
                 <div class="card" style="border-radius: 15px;">
                     <div class="card-body p-5">
                         <h3 class="text-center mb-5">Create Bank Account</h3>
-                        <form [formGroup]="formdata" (ngSubmit)="createBankAccount(formdata.value)">
+                        <form ngNativeValidate [formGroup]="formdata" (ngSubmit)="createBankAccount(formdata.value)">
                             <div class="form-group">
                                 <label for="nameId" class="form-label">Name </label>
-                                <input formControlName="formName" class="form-control" id="nameId" name="nameField" placeholder="Name">
+                                <input formControlName="formName" class="form-control" id="nameId" name="nameField" placeholder="Name" required>
                             </div>
                             <div class="form-group">
                                 <label for="descriptionId" class="form-label">Description </label>
-                                <input formControlName="formDescription" class="form-control" id="descriptionId" name="descriptionField" placeholder="Description">
+                                <input formControlName="formDescription" class="form-control" id="descriptionId" name="descriptionField" placeholder="Description" required>
                             </div>
                             <div class="form-group">
                                 <label for="accountType" class="form-label">Account Type </label>
 
-                                <select formControlName="formAccountType" name="accountType" class="form-select">
+                                <select formControlName="formAccountType" name="accountType" class="form-select" required>
                                 <option selected value="1">Checking</option>
                                 <option value="2">Savings</option>
                             </select>
