--- a/src/app/components/feed/feed.component.css
+++ b/src/app/components/feed/feed.component.css
@@ -20,6 +20,11 @@
     box-shadow: 0 0.46875rem 2.1875rem rgba(90, 97, 105, 0.1), 0 0.9375rem 1.40625rem rgba(90, 97, 105, 0.1), 0 0.25rem 0.53125rem rgba(90, 97, 105, 0.12), 0 0.125rem 0.1875rem rgba(90, 97, 105, 0.1);
 }
 
+.card:hover {
+    /* display: none; */
+    cursor: pointer;
+}
+
 .l-bg-cherry {
     background: linear-gradient(to right, #493240, #f09) !important;
     color: #fff;
