--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -6,7 +6,10 @@
                   <div class="card-body p-5">
                       <h3 class="text-center mb-5">Change Password</h3>
                       <form [formGroup]="changePasswordForm" (ngSubmit)="changePassword()">
-
+                          <div class="mb-3">
+                              <label for="current-password" class="form-label">Current Password</label>
+                              <input type="password" class="fortextbox" name="current-password" placeholder="Current Password" formControlName="currentPassword" class="form-control" id="current-password">
+                          </div>
                           <div class="mb-3">
                               <label for="new-password" class="form-label">New Password</label>
                               <input type="password" class="fortextbox" name="new-password" placeholder="New Password" formControlName="newPassword" class="form-control" id="new-password">
