--- a/src/app/components/navbar-login/navbar-login.component.html
+++ b/src/app/components/navbar-login/navbar-login.component.html
@@ -1,10 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg "> <!--navbar-light bg-light-->
     <div class="container-fluid">
         <a routerLink="/login" class="navbar-brand"><img src="../../../assets/img/dollar-coin-stack-svgrepo-com.svg" class="navbar-brand" height="40" alt="Stack of coins">CashOverflow</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <button (click)="toggleDarkTheme()">Dark Mode :3</button>
             <ul class="navbar-nav mb-2 mb-lg-0 ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" routerLink="/login">Login</a>
