--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,33 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
+body {
+  --text-color: #222;
+  --bkg-color: #fff;
+  --btn-txt-color: white;
+  --btn-bg-color: rgb(11, 88, 160);
+}
+
+body.dark-theme {
+--text-color: #eee;
+--bkg-color: #252222;
+--btn-txt-color: rgb(46, 43, 43);
+--btn-bg-color: rgb(20, 211, 195);
+}
+
+button {
+  padding: 10px;
+  border: none;
+  border-radius: 2px;
+  color: var(--btn-txt-color);
+  background-color: var(--btn-bg-color);
+}
+
+nav {
+  background-color: var(--bkg-color);
+  color: var(--text-color);
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
