--- a/src/app/components/navbar-general/navbar-general.component.html
+++ b/src/app/components/navbar-general/navbar-general.component.html
@@ -13,7 +13,13 @@
                     <a class="nav-link" routerLink="/createBankAccountForm">Create Bank Account</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/transferMoneyBankAccount">Transfer Money Between Accounts</a>
+                    <div routerLink="/transferMoneyBankAccount" class="dropdown">
+                        <a class="nav-link">Transfer Money</a>
+                        <div class="dropdown-content">
+                            <a class="nav-link" routerLink="/transferMoneyBankAccount">Between Accounts</a>
+                            <a class="nav-link" routerLink="/transferMoneyBetweenUsers">To Other Users</a>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/manageBankAccountBalance">Manage Account Balance</a>
