--- a/src/app/components/navbar-general/navbar-general.component.html
+++ b/src/app/components/navbar-general/navbar-general.component.html
@@ -13,7 +13,7 @@
                     <a class="nav-link" routerLink="/createBankAccountForm">Create Bank Account</a>
                 </li>
                 <li class="nav-item">
-                    <div routerLink="/transferMoneyBankAccount" class="dropdown">
+                    <div class="dropdown">
                         <a class="nav-link">Transfer Money</a>
                         <div class="dropdown-content">
                             <a class="nav-link" routerLink="/transferMoneyBankAccount">Between Accounts</a>
