--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
                 <div class="card" style="border-radius: 15px;">
                     <div class="card-body p-5">
                         <h3 class="text-center mb-5">Welcome!</h3>
-                        <form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)">
+                        <form [formGroup]="formdata" (ngSubmit)="loggedInWithAuth0=false; onClickSubmit(formdata.value)">
                             <div *ngIf="showErrorMessage">
                                 <p style="color: red;">Invalid credentials. Please try again.</p>
                             </div>
