--- a/src/app/components/navbar-login/navbar-login.component.html
+++ b/src/app/components/navbar-login/navbar-login.component.html
@@ -6,10 +6,10 @@
       </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 ml-auto">
-                <li class="nav-item active" *ngIf="(auth.isAuthenticated$ | async )== false">
+                <li class="nav-item active">
                   <a class="nav-link" routerLink="/login">Login</a>
                 </li>
-                <li class="nav-item" *ngIf="(auth.isAuthenticated$ | async )">
+                <li class="nav-item">
                   <a class="nav-link" routerLink="/register">Register</a>
                 </li>
             </ul>
