added html for user transfer

--- a/src/app/components/navbar-general/navbar-general.component.html
+++ b/src/app/components/navbar-general/navbar-general.component.html
@@ -17,7 +17,7 @@
                         <a class="nav-link">Transfer Money</a>
                         <div class="dropdown-content">
                             <a class="nav-link" routerLink="/transferMoneyBankAccount">Between Accounts</a>
-                            <a class="nav-link" routerLink="/transferMoneyBetweenUsers">To Other Users</a>
+                            <a class="nav-link" routerLink="/transferMoneyBetweenUsers">With Other Users</a>
                         </div>
                     </div>
                 </li>
