--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,7 +11,8 @@
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label">Username</label>
-                                <input type="text" name="loginUsername" placeholder="Username" formControlName="loginUsername" class="form-control" id="exampleInputEmail1">
+                                <input type="text" id="usernameField" name="loginUsername" placeholder="Username" formControlName="loginUsername"
+                                  class="form-control" id="exampleInputEmail1">
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">Password</label>
@@ -19,9 +20,17 @@
                             </div>
                             <div class="d-flex justify-content-center">
                                 <input type="submit" class="btn btn-primary" value="Log In">
-                                <input (click)="loginWithAuth()" class="btn btn-primary" value="Log In with Auth0">
+
                             </div>
                         </form>
+                        <div class="d-flex justify-content-center">
+                          <br>
+                          <p>OR</p>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                          <button (click)="loginWithAuth()" class="btn btn-primary">Log In with Auth0</button>
+
+                        </div>
                     </div>
                 </div>
             </div>
