--- a/src/app/components/navbar-general/navbar-general.component.html
+++ b/src/app/components/navbar-general/navbar-general.component.html
@@ -6,6 +6,9 @@
       </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 ml-auto">
+               <li class="nav-item">
+                    <button (click)="toggleDarkTheme()">Dark Mode</button>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" routerLink="/feed">My Account</a>
                 </li>
