--- a/src/app/components/navbar-login/navbar-login.component.html
+++ b/src/app/components/navbar-login/navbar-login.component.html
@@ -5,8 +5,10 @@
         <span class="navbar-toggler-icon"></span>
       </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <button (click)="toggleDarkTheme()">Dark Mode :3</button>
             <ul class="navbar-nav mb-2 mb-lg-0 ml-auto">
+                <li class="nav-item">
+                  <button (click)="toggleDarkTheme()">Dark Mode</button>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" routerLink="/login">Login</a>
                 </li>
