Added a small styling change for the notification boxes

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,5 +37,10 @@ nav {
   color: var(--text-color);
 }
 
+.toast-top-right {
+  right: 12px;
+  top: 75px !important;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
