--- a/src/app/components/transfer-money-between-users/transfer-money-between-users.component.html
+++ b/src/app/components/transfer-money-between-users/transfer-money-between-users.component.html
@@ -60,9 +60,14 @@
 
                           <br/>
                           <div class="d-flex justify-content-center">
-                              <button type="submit" class="btn btn-primary">Submit</button>
+                              <button type="submit" class="btn btn-primary">Accept</button>
                           </div>
                       </form>
+                      <br>
+                      <div class="d-flex justify-content-center">
+                        <button type="deny" style="background-color: red" (click)="deny(request)" class="btn btn-primary">Deny</button>
+                      </div>
+                      
                   </div>
               </div>
           </div>
