antonio changes with dev branch

--- a/src/app/components/navbar-general/navbar-general.component.html
+++ b/src/app/components/navbar-general/navbar-general.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg"> <!--navbar-light bg-light-->
     <div class="container-fluid">
-        <a routerLink="/feed" class="navbar-brand"><img src="../../../assets/img/dollar-coin-stack-svgrepo-com.svg" class="navbar-brand" height="40" alt="Stack of coins">CashOverflow</a>
+        <a routerLink="/feed" class="navbar-brand"><img [src]= "iconActive" class="navbar-brand" height="40" alt="Stack of coins">CashOverflow</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -16,14 +16,14 @@
                     <a class="nav-link" routerLink="/createBankAccountForm">Create Bank Account</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown">
-                        <a class="nav-link">Transfer Money</a>
-                        <div class="dropdown-content">
-                            <a class="nav-link" routerLink="/transferMoneyBankAccount">Between Accounts</a>
-                            <a class="nav-link" routerLink="/transferMoneyBetweenUsers">With Other Users</a>
-                        </div>
-                    </div>
-                </li>
+                  <div class="dropdown">
+                      <a class="nav-link">Transfer Money</a>
+                      <div class="dropdown-content">
+                          <a class="nav-link" routerLink="/transferMoneyBankAccount">Between Accounts</a>
+                          <a class="nav-link" routerLink="/transferMoneyBetweenUsers">With Other Users</a>
+                      </div>
+                  </div>
+              </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/manageBankAccountBalance">Manage Account Balance</a>
                 </li>
